--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h1>This is the second heading</h1>
         
         <img src="html5-3384014_1280.webp" width="200" height="200">
+        <p><a href="https://colle4567.github.io/"></a> Link to this page</p>
     </body>
 </html>
