--- a/demowithoutcss.html
+++ b/demowithoutcss.html
@@ -85,8 +85,8 @@
 
  <!-- Image Examples -->
  <h2>Image Examples</h2>
- <img src="https://www.pexels.com/photo/lazy-cat-resting-on-soft-bed-at-home-5240579/" alt="A cute kitten">
- <img src="https://www.pexels.com/photo/photo-of-short-coated-white-cat-lying-on-brown-wooden-surface-1653287/" alt="Another cute kitten">
+ <img src="https://images.pexels.com/photos/5240579/pexels-photo-5240579.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A cute kitten">
+ <img src="https://images.pexels.com/photos/1653287/pexels-photo-1653287.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Another cute kitten">
 
  <!-- Links -->
  <h2>Links</h2>
