--- a/demo.html
+++ b/demo.html
@@ -54,8 +54,8 @@
 
  <!-- Image Examples -->
  <h2>Image Examples</h2>
- <img src="https://placekitten.com/400/300" alt="A cute kitten">
- <img src="https://placekitten.com/300/200" alt="Another cute kitten">
+ <img src="https://images.pexels.com/photos/5240579/pexels-photo-5240579.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A cute kitten">
+ <img src="https://images.pexels.com/photos/1653287/pexels-photo-1653287.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Another cute kitten">
 
  <!-- Links -->
  <h2>Links</h2>
