--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         
         <img src="html5-3384014_1280.webp" width="200" height="200">
         <p><a href="https://colle4567.github.io/"> Link to this page</a></p>
-        <p><a href="demo.html"> Link to html page</a></p>
-        <p><a href="demowithoutcss.html"> Link to html and css page</a></p>
+        <p><a href="demo.html"> Link to html with css page</a></p>
+        <p><a href="demowithoutcss.html"> Link to html without css page</a></p>
+        <p><a href="demowithoutcss.html"> Link to page</a></p>
     </body>
 </html>
