--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p><a href="https://colle4567.github.io/"> Link to this page</a></p>
         <p><a href="demo.html"> Link to html with css page</a></p>
         <p><a href="demowithoutcss.html"> Link to html without css page</a></p>
-        <p><a href="demowithoutcss.html"> Link to page</a></p>
+        <p><a href="page.html"> Link to page</a></p>
     </body>
 </html>
