--- a/page.html
+++ b/page.html
@@ -20,8 +20,8 @@
   <!-- Introduction -->
  <p>This page is about a cat.</p>
  <main>
-    <p>This is a simple HTML page about cats.</p> [5]
-
+    
+    <img src="https://images.pexels.com/photos/5240579/pexels-photo-5240579.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A cute kitten">
     <section>
         <h2>Introduction to Cats</h2>
         <p>Cats are one of the most popular pets in the world. They are known for their independent nature and playful behavior.</p>
