--- a/page.html
+++ b/page.html
@@ -18,12 +18,12 @@
   <!-- Main Heading -->
  <h1>HTML page</h1>
   <!-- Introduction -->
- <p>This page is about a cat.</p>
+ <p>This page is about a cat liker.</p>
  <main>
     
     <img src="https://images.pexels.com/photos/5240579/pexels-photo-5240579.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="A cute kitten">
     <section>
-        <h2>Why like cats.</h2>
+        <h2>Why I like cats.</h2>
         <p>Cats are one of the most popular pets in the world. They are known for their independent nature and playful behavior. Thats why I like cats. Cats should be liked. Not liking a cat is like not liking yourself.</p>
     </section>
 
@@ -57,10 +57,10 @@
         <h2>Top 5 Cat Breeds</h2>
         <ol>
             <li><a href="https://en.wikipedia.org/wiki/Persian_cat">Persian</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Sphynx_cat"></a>Sphynx</li>
-            <li><a href="https://en.wikipedia.org/wiki/Siamese_cat"></a>Siamese</li>
-            <li><a href="https://en.wikipedia.org/wiki/Bengal_cat"></a>Bengal</li>
-            <li><a href="https://en.wikipedia.org/wiki/Abyssinian_cat"></a>Abyssinian</li>
+            <li><a href="https://en.wikipedia.org/wiki/Sphynx_cat">Sphynx</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Siamese_cat">Siamese</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Bengal_cat">Bengal</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Abyssinian_cat">Abyssinian</a></li>
         </ol>
     </section>
 </main>
