--- a/project.html
+++ b/project.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Johnny stole the candy!</title>
+    <title>Your Website Title</title>
     <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="project.html"><img src="logo.png" alt="Logo" class="logo"></a>
-        <button onclick="location.href='aboutus.html'">About Us</button>
-        <button onclick="location.href='groups.html'">Groups</button>
-        <button onclick="location.href='getacopy.html'">Get a Copy</button>
+        <a href="index.html"><img src="logo.png" alt="Logo" class="logo"></a>
+        <div class="nav-buttons">
+            <button onclick="location.href='aboutus.html'">About Us</button>
+            <button onclick="location.href='groups.html'">Groups</button>
+            <button onclick="location.href='getacopy.html'">Get a Copy</button>
+        </div>
     </nav>
 
     <!-- Parallax Image -->
