--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="index.html"><img src="logo.png" alt="Logo" class="logo"></a>
+        <a href="index.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>
         <div class="nav-buttons">
             <button onclick="location.href='aboutus.html'">About Us</button>
             <button onclick="location.href='groups.html'">Groups</button>
@@ -44,7 +44,7 @@
     <!-- Call to Action Section -->
     <section class="cta">
         <h2>What are you waiting for?</h2>
-        <img src="cta-image.jpg" alt="Call to Action Image">
+        <img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Call to Action Image">
         <button onclick="location.href='getacopy.html'">Get a Copy Now!</button>
     </section>
 
