--- a/project.html
+++ b/project.html
@@ -10,11 +10,11 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="index.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>
+        <a href="project.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>
         <div class="nav-buttons">
-            <button onclick="location.href='aboutus.html'">About Us</button>
-            <button onclick="location.href='groups.html'">Groups</button>
-            <button onclick="location.href='getacopy.html'">Get a Copy</button>
+            <li><a href='aboutus.html'>About Us</a></li>
+            <li><a href='groups.html'>Groups</a></li>
+            <li>><a href='getacopy.html'>Get a Copy</a></li
         </div>
     </nav>
 
