--- a/project.html
+++ b/project.html
@@ -11,11 +11,9 @@
     <!-- Navbar -->
     <nav class="navbar">
         <a href="project.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>
-        <div class="nav-buttons">
-            <li><a href='aboutus.html'>About Us</a></li>
-            <li><a href='groups.html'>Groups</a></li>
-            <li>><a href='getacopy.html'>Get a Copy</a></li
-        </div>
+        <a href='aboutus.html'>About Us</a>
+        <a href='groups.html'>Groups</a>
+        <a href='getacopy.html'>Get a Copy</a>
     </nav>
 
     <!-- Parallax Image -->
