--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="project.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>
+        <!--<a href="project.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>-->
         <ul>
             <li><a href='aboutus.html'>About Us</a></li>
             <li><a href='groups.html'>Groups</a></li>
