--- a/project.html
+++ b/project.html
@@ -9,15 +9,15 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar">
+    <div class="navbar">
         <!--<a href="project.html"><img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Logo" class="logo"></a>-->
-        <ul>
-            <li><a href='aboutus.html'>About Us</a></li>
-            <li><a href='groups.html'>Groups</a></li>
-            <li><a href='getacopy.html'>Get a Copy</a></li>
-        </ul>
+        <a class = 'active' href='project.html'>Home</a>
+        <a href='aboutus.html'>About Us</a>
+        <a href='groups.html'>Groups</a>
+        <a href='getacopy.html'>Get a Copy</a>
+  
         
-    </nav>
+    </div>
 
     <!-- Parallax Image -->
     <div class="parallax"></div>
