--- a/page.html
+++ b/page.html
@@ -4,14 +4,8 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>HTML Functionality Showcase</title>
- <style>
-    body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-    background-color: #f4f4f4;
-    color: #333;
-    }
-</style>
+ <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
