--- a/project.html
+++ b/project.html
@@ -29,6 +29,9 @@
         <button onclick="location.href='aboutus.html'">Learn More</button>
     </section>
 
+    <!-- Parallax Image -->
+    <div class="parallax2"></div>
+
     <!-- Zig Zag Layout Section -->
     <section class="zig-zag">
         <div class="row">
@@ -37,7 +40,7 @@
                 <p>This is the first subsection of our zig zag layout.</p>
             </div>
             <div class="zigzag-item right">
-                <img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="350"></img>
+                <img src="Friend.jpg" width="450" height="350"></img>
             </div>
         </div>
     </section>
@@ -45,7 +48,7 @@
     <section class="zig-zag">     
         <div class="row">
             <div class="zigzag-item right">
-                <img src="https://images.pexels.com/photos/1831234/pexels-photo-1831234.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" width="450" height="350"></img>
+                <img src="Mom.jpg" width="450" height="350"></img>
             </div>
             <div class="zigzag-item left">
                 <h3>Subsection 1</h3>
